--- a/app/views/web/members/_skill_fields.html.haml
+++ b/app/views/web/members/_skill_fields.html.haml
@@ -2,7 +2,7 @@
   .close
     = link_to_remove_association 'x', f, :class => 'btn btn-danger disabled'
   .controls
-    = f.association :dict
+    = f.association :dict, :label => false
     = f.input :level, :collection => Member::Skill::LEVELS
     = f.input :duration
     = f.input :description
