--- a/app/views/web/members/_additional_education_fields.html.haml
+++ b/app/views/web/members/_additional_education_fields.html.haml
@@ -2,4 +2,4 @@
   .close
     = link_to_remove_association 'x', f, :class => 'btn btn-danger disabled'
   .controls
-    = f.input_field :description
+    = f.input :description
