#4 fixed page text

--- a/app/views/web/welcome/index.ru.html.haml
+++ b/app/views/web/welcome/index.ru.html.haml
@@ -3,7 +3,7 @@
   %li
     %p
       %b Что мы хотим сделать?
-    %p Выездной обучающий семинар для молодёжи, которая хочет работать в сфере ИТ, в частности, заниматься разработкой программных продуктов. Участники в течение нескольких дней будут работать над продуктом. В конце семинара должен получиться он должен быть готов.
+    %p Выездной обучающий семинар для молодёжи, которая хочет работать в сфере ИТ, в частности, заниматься разработкой программных продуктов. Участники в течение нескольких дней будут работать над продуктом. В результате каждый участник в конце семинара покажет готовый продукт.
   %li
     %p
       %b Где и когда это будет?
@@ -25,13 +25,13 @@
   %li
     %p
       %b За чей счёт?
-    %p Для участников мероприятие будет бесплатным. (может возникнуть оплата за проживание и питание, от нас это, к сожалению, не зависит, точная информация будет известна в ближайшее время).
-    %p Проживание, питание, отъезд и приезд будет организовано МИЦ за счёт Министерства образования.
-    %p Ноутбуки участники возьмут свои собственные прямо на мероприятие.
+    %p Для участников мероприятие будет бесплатным.
+    %p Проживание, питание, доставка участников до места назначения и обратно будут организованы МИЦ за счёт Министерства образования.
+    %p Каждый участник должен иметь при себе личный ноутбук и желание плодотворно поработать.
   %li
     %p
       %b Зачем это нужно?
     %ul
       %li Создание площадки для самореализации будущих специалистам
-      %li Передача им опыта
+      %li Обмен опытом между участниками и действующими специалистами ведущих компании по разработке программного обеспечения г.Ульяновска
       %li Создание «движухи» для молодых программистов Ульяновской области Мероприятие реализуется на общественных началах. В планах сделать Deadline-camp ежегодным.
