--- a/app/views/web/members/_job_fields.html.haml
+++ b/app/views/web/members/_job_fields.html.haml
@@ -3,8 +3,8 @@
     = link_to_remove_association 'x', f, :class => 'btn btn-danger disabled'
   .controls
     = f.input :company
-    = f.input :started_at
-    = f.input :finished_at
+    = f.input :started_at, :as => :date_picker
+    = f.input :finished_at, :as => :date_picker
     = f.input :job
     = f.input :responsibility
     = f.input :achievements
