--- a/app/views/web/members/_lang_fields.html.haml
+++ b/app/views/web/members/_lang_fields.html.haml
@@ -3,4 +3,4 @@
     = link_to_remove_association 'x', f, :class => 'btn btn-danger disabled'
   .controls
     = f.association :language
-    = f.input :level, :collection => Dict::Language::LEVELS
+    = f.input :level, :collection => Language::LEVELS
