--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -22,7 +22,7 @@
             %span.icon-bar
             %span.icon-bar
             %span.icon-bar
-          %a.brand(href="/") DeadlineCamp
+          %a.brand(href="/")= t 'base_name'
           .container.nav-collapse
             %ul.nav
               %li= link_to t('.new_member'), new_member_path
