--- a/app/views/web/members/_form.html.haml
+++ b/app/views/web/members/_form.html.haml
@@ -110,7 +110,7 @@
   %h3= t '.camp'
   = f.input :camp_time
   = f.input :camp_life
-  = f.input :camp_fee
+  -#= f.input :camp_fee
   = f.input :camp_notebook
   = f.input :camp_training
 
