--- a/app/views/web/welcome/index.ru.html.haml
+++ b/app/views/web/welcome/index.ru.html.haml
@@ -7,7 +7,7 @@
   %li
     %p
       %b Где и когда это будет?
-    %p 17-24 июля 2012 года, в летнем лагере или турбазе, в каком конкретно, пока неизвестно.
+    %p 9-16 июля 2012 года, в летнем лагере или турбазе, в каком конкретно, пока неизвестно.
   %li
     %p
       %b Какие проекты будут разрабатываться участниками?
@@ -34,4 +34,4 @@
     %ul
       %li Создание площадки для самореализации будущих специалистам
       %li Обмен опытом между участниками и действующими специалистами ведущих компании по разработке программного обеспечения г.Ульяновска
-      %li Создание «движухи» для молодых программистов Ульяновской области Мероприятие реализуется на общественных началах. В планах сделать Deadline-camp ежегодным.
+      %li Создание «движухи» для молодых программистов Ульяновской области Мероприятие реализуется на общественных началах. В планах сделать #{t('base_name')} ежегодным.
