--- a/app/views/web/members/_skill_other_fields.html.haml
+++ b/app/views/web/members/_skill_other_fields.html.haml
@@ -1,1 +1,8 @@
-= render 'skill_fields', :f => f
+.control-group.nested-fields
+  .close
+    = link_to_remove_association 'x', f, :class => 'btn btn-danger disabled'
+  .controls
+    = f.input :name, :label => false
+    = f.input :level, :collection => Member::Skill::LEVELS
+    = f.input :duration
+    = f.input :description
