--- a/app/views/web/members/_lang_fields.html.haml
+++ b/app/views/web/members/_lang_fields.html.haml
@@ -1,6 +1,5 @@
 .control-group.nested-fields
-  .close
+  .close.mr280
     = link_to_remove_association 'x', f, :class => 'btn btn-danger disabled'
-  .controls
-    = f.association :language
-    = f.input :level, :collection => Language::LEVELS
+  = f.association :language
+  = f.input :level, :collection => Language::LEVELS
