--- a/app/views/web/members/_skill_fields.html.haml
+++ b/app/views/web/members/_skill_fields.html.haml
@@ -1,8 +1,7 @@
 .control-group.nested-fields
-  .close
+  .close.mr280
     = link_to_remove_association 'x', f, :class => 'btn btn-danger disabled'
-  .controls
-    = f.association :dict, :label => false
-    = f.input :level, :collection => Member::Skill::LEVELS
-    = f.input :duration
-    = f.input :description
+  = f.association :dict, :label => false
+  = f.input :level, :collection => Member::Skill::LEVELS
+  = f.input :duration
+  = f.input :description
