--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,12 +11,7 @@
  *= require bootstrap_and_overrides
  *= require bootswatch
  *= require jquery.ui.all
+ *= require style
  *= require_self
 */
 
-.mr280 {
-  margin-right: 280px;
-}
-.ml30 {
-  margin-left: 30px;
-}
