--- a/app/views/web/members/_form.html.haml
+++ b/app/views/web/members/_form.html.haml
@@ -1,4 +1,4 @@
-= simple_form_for @member, :validate => true, :url => members_path, :html => {:class => "form-horizontal"} do |f|
+= simple_form_for @member, :as => :member, :validate => true, :url => members_path, :html => {:class => "form-horizontal"} do |f|
   = f.error_notification
 
   %h3= t('.contact_info')
