--- a/app/assets/stylesheets/admin/application.css
+++ b/app/assets/stylesheets/admin/application.css
@@ -9,5 +9,7 @@
  * compiled file, but it's generally better to create a new file per style scope.
  *
  *= require bootstrap_and_overrides
+ *= require jquery.ui.all
+ *= require style
  *= require_self
 */
