fixes #27. member fields type

--- a/app/views/web/admin/members/_form.html.haml
+++ b/app/views/web/admin/members/_form.html.haml
@@ -33,8 +33,8 @@
 
   %hr
   %h3= t '.hobby'
-  = f.input :hobby
-  = f.input :sport
+  = f.input :hobby, :as => :text_desc
+  = f.input :sport, :as => :text_desc
 
   %hr
   %h3= t '.camp'
