--- a/app/views/web/admin/members/_other_fields.html.haml
+++ b/app/views/web/admin/members/_other_fields.html.haml
@@ -1,4 +1,4 @@
 .control-group.nested-fields
   -#.close.mr280
     = link_to_remove_association 'x', f, :class => 'btn btn-danger disabled'
-  = f.input :description
+  = f.input :description, :as => :text_desc
