--- a/app/views/web/members/_job_fields.html.haml
+++ b/app/views/web/members/_job_fields.html.haml
@@ -5,5 +5,5 @@
   = f.input :started_at, :as => :date_picker
   = f.input :finished_at, :as => :date_picker
   = f.input :job
-  = f.input :responsibility
+  = f.input :responsibility, :as => :text_desc
   = f.input :achievements, :as => :text_desc
