--- a/app/views/web/members/_skill_other_fields.html.haml
+++ b/app/views/web/members/_skill_other_fields.html.haml
@@ -4,4 +4,4 @@
   = f.input :name, :label => false
   = f.input :level, :collection => Member::Skill::LEVELS
   = f.input :duration
-  = f.input :description
+  = f.input :description, :as => :text_desc
