fixes #36. footer contacts

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -44,6 +44,7 @@
                 -#%li= link_to "Link 3", "/path3"
 
       %footer
+        %p(class='pull-right')= t('contacts.phone')
         %p &copy; Company 2012
     /
       Javascripts
