fixes #35. email text

--- a/app/views/member_mailer/approved.ru.html.haml
+++ b/app/views/member_mailer/approved.ru.html.haml
@@ -1,1 +1,3 @@
-%h1 Ваша анкеты была подтверждена.
+%h2 Ваша анкета была успешно подтверждена организаторам Deadline-смены.
+
+%p По всем вопросам Вы можете обратится по телефону: 97-18-47
