--- a/app/views/member_mailer/welcome.ru.html.haml
+++ b/app/views/member_mailer/welcome.ru.html.haml
@@ -1,1 +1,9 @@
-%h1 Добро пожаловать на Смену Deadline
+%h2 Добро пожаловать на Смену Deadline!
+
+%p Спасибо за интерес к Deadline-смене.
+
+%p Ваша анкета была успешно отправлена организаторам Deadline-смены.
+
+%p Организаторы свяжутся с Вами дополнительно.
+
+%p По всем вопросам Вы можете обратится по телефону: 97-18-47
