--- a/app/views/member_mailer/welcome.ru.html.haml
+++ b/app/views/member_mailer/welcome.ru.html.haml
@@ -2,8 +2,10 @@
 
 %p Спасибо за интерес к Deadline-смене.
 
-%p Ваша анкета была успешно отправлена организаторам Deadline-смены.
+%p Ваша анкета была успешно отправлена организаторам проекта.
 
-%p Организаторы свяжутся с Вами дополнительно.
+%p Пожалуйста, заполните необходимые данные на Вашей личной странице для успешного прохождения отбора для участия в Deadline-Смене. Для этого авторизуйтесь на сайте и войдите в #{link_to "Ваш профиль" , edit_account_url}.
 
-%p По всем вопросам Вы можете обратится по телефону: 97-18-47
+%p Организаторы свяжутся с Вами дополнительно по указанному телефону или email.
+
+%p По всем вопросам Вы можете обратиться по телефону: +7 (8422) 97-18-47
