--- a/app/views/layouts/admin/application.html.haml
+++ b/app/views/layouts/admin/application.html.haml
@@ -8,6 +8,7 @@
     / Le HTML5 shim, for IE6-8 support of HTML elements
     /[if lt IE 9]
       = javascript_include_tag "http://html5shim.googlecode.com/svn/trunk/html5.js"
+    = javascript_include_tag "admin/application"
     = stylesheet_link_tag "admin/application", :media => "all"
     %link(href="images/favicon.ico" rel="shortcut icon")
     %link(href="images/apple-touch-icon.png" rel="apple-touch-icon")
@@ -26,6 +27,7 @@
           .container.nav-collapse
             %ul.nav
               %li= link_to t('.members_list'), admin_members_path
+              %li= link_to t('.pages_list'), admin_pages_path
 
     .container
 
@@ -49,5 +51,5 @@
       Javascripts
       \==================================================
     / Placed at the end of the document so the pages load faster
-    = javascript_include_tag "admin/application"
+    -#= javascript_include_tag "admin/application"
 
