--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -64,7 +64,7 @@
 
       %footer
         %p(class='pull-right')= t('contacts.phone')
-        %p &copy; Company 2012
+        %p &copy; #{t('.np')}
     /
       Javascripts
       \==================================================
