--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -9,9 +9,16 @@
  * compiled file, but it's generally better to create a new file per style scope.
  *
  *= require bootstrap_and_overrides
- *= require bootswatch
  *= require jquery.ui.all
- *= require style
  *= require_self
 */
 
+.mr280 {
+  margin-right: 280px;
+}
+.ml30 {
+  margin-left: 30px;
+}
+h2 {
+  margin-bottom: 10px;
+}
