--- a/app/views/web/members/new.html.haml
+++ b/app/views/web/members/new.html.haml
@@ -1,43 +1,45 @@
-= simple_form_for @member, :as => :member, :validate => true, :url => members_path, :html => {:class => "form-horizontal"} do |f|
+= simple_form_for @member, :as => :member, :validate => true, :url => members_path, :html => {:class => "form-horizontal well"} do |f|
   = f.error_notification
 
   - with_options :scope => "members" do |i18n|
-    %h3= i18n.t('contact_info')
-    = f.input :first_name
-    = f.input :last_name
-    = f.input :phone,
-      :input_html => {:rel => 'popover', :title => i18n.t('phone.title'), :"data-content" => i18n.t('phone.content')}
-    = f.input :email
-    = f.input :password
-    = f.input :password_confirmation
 
-    %hr
-    %h3= i18n.t('education')
-    = f.input :institute
-    .control-group.string.optional
-      %label.string.optional.control-label{:for => "member_institute"}= i18n.t('study_start')
-      .controls
-        = f.input_field :start_month, :collection => Member::STUDY_MONTH, :include_blank => i18n.t('month'),
-          :style => 'width: 155px'
-        = f.input_field :start_year, :placeholder => i18n.t('year'), :class => 'span1'
-    .control-group.string.optional
-      %label.string.optional.control-label{:for => "member_institute"}= i18n.t('study_finish')
-      .controls
-        = f.input_field :finish_month, :collection => Member::STUDY_MONTH, :include_blank => i18n.t('month'),
-          :style => 'width: 155px'
-        = f.input_field :finish_year, :placeholder => i18n.t('year'), :class => 'span1'
-    = f.input :department
-    = f.input :profession
-    = f.input :degree
-    = f.input :gpa
+    %fieldset
+      %legend= i18n.t('contact_info')
+      = f.input :first_name
+      = f.input :last_name
+      = f.input :phone,
+        :input_html => {:rel => 'popover', :title => i18n.t('phone.title'), :"data-content" => i18n.t('phone.content')}
+      = f.input :email
+      = f.input :password
+      = f.input :password_confirmation
 
-    %hr
-    %h3= i18n.t 'camp'
-    = f.input :camp_time, :label => false, :inline_label => i18n.t('camp_time')
-    = f.input :camp_life, :label => false, :inline_label => i18n.t('camp_life')
-    = f.input :camp_notebook, :label => false, :inline_label => i18n.t('camp_notebook')
-    = f.input :camp_training, :label => false, :inline_label => i18n.t('camp_training')
+    %fieldset 
+      %legend= i18n.t('education')
+      = f.input :institute
+      .control-group.string.optional
+        %label.string.optional.control-label{:for => "member_institute"}= i18n.t('study_start')
+        .controls
+          = f.input_field :start_month, :collection => Member::STUDY_MONTH, :include_blank => i18n.t('month'),
+            :style => 'width: 155px'
+          = f.input_field :start_year, :placeholder => i18n.t('year'), :class => 'span1'
+      .control-group.string.optional
+        %label.string.optional.control-label{:for => "member_institute"}= i18n.t('study_finish')
+        .controls
+          = f.input_field :finish_month, :collection => Member::STUDY_MONTH, :include_blank => i18n.t('month'),
+            :style => 'width: 155px'
+          = f.input_field :finish_year, :placeholder => i18n.t('year'), :class => 'span1'
+      = f.input :department
+      = f.input :profession
+      = f.input :degree
+      = f.input :gpa
+
+    %fieldset
+      %legend= i18n.t 'camp'
+      = f.input :camp_time, :label => false, :inline_label => i18n.t('camp_time')
+      = f.input :camp_life, :label => false, :inline_label => i18n.t('camp_life')
+      = f.input :camp_notebook, :label => false, :inline_label => i18n.t('camp_notebook')
+      = f.input :camp_training, :label => false, :inline_label => i18n.t('camp_training')
 
     .form-actions
       = f.button :submit, :class => 'btn btn-primary'
-      = link_to i18n.t('already_have_account'), new_session_path
+      = link_to t('.already_have_account'), new_session_path
