--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,73 +1,11 @@
 !!! 5
 %html(lang="en")
   %head
-    %meta(charset="utf-8")
-    %meta(name="viewport" content="width=device-width, initial-scale=1.0")
-    %title= title
-    = csrf_meta_tags
-    / Le HTML5 shim, for IE6-8 support of HTML elements
-    /[if lt IE 9]
-      = javascript_include_tag "http://html5shim.googlecode.com/svn/trunk/html5.js"
-    = stylesheet_link_tag "application", :media => "all"
-    %link(href="images/favicon.ico" rel="shortcut icon")
-    %link(href="images/apple-touch-icon.png" rel="apple-touch-icon")
-    %link(href="images/apple-touch-icon-72x72.png" rel="apple-touch-icon" sizes="72x72")
-    %link(href="images/apple-touch-icon-114x114.png" rel="apple-touch-icon" sizes="114x114")
-
+    = render 'layouts/shared/head'
   %body
-    .navbar.navbar-fixed-top
-      .navbar-inner
-        .container
-          %a.btn.btn-navbar(data-target=".nav-collapse" data-toggle="collapse")
-            %span.icon-bar
-            %span.icon-bar
-            %span.icon-bar
-          %a.brand(href="/")= t 'base_name'
-          .container.nav-collapse
-            %ul.nav
-              %li= link_to_page contacts_page
-              %li= link_to_page program_page
-              %li= link_to_page provider_page
-              %li= link_to_page partners_page
-              %li= link_to_page place_page
-            %ul.nav.pull-right
-              - if member_signed_in?
-                %li
-                  %a{ :href => edit_account_path }
-                    = t('.my_account')
-                    = "(#{current_member.email})"
-                %li= link_to t('.logout'), session_path, :method => :delete
-              - else
-                %li= link_to t('.new_member'), new_member_path
-                %li.divider-vertical
-                %li= link_to t('.auth'), new_session_path
-
+    = render 'layouts/shared/navbar'
     .container
-
       .content
         = flash_block
         = yield
-        -#.row
-          .span9
-            = flash_block
-            = yield
-          .span3
-            - if content_for?(:sidebar)
-              .well.sidebar-nav
-                = yield :sidebar
-                -#%h3 Sidebar
-                -#%ul.nav.nav-list
-                  %li.nav-header Sidebar
-                  %li= link_to "Link 1", "/path1"
-                  %li= link_to "Link 2", "/path2"
-                  %li= link_to "Link 3", "/path3"
-
-      %footer
-        %p(class='pull-right')= t('contacts.phone')
-        %p &copy; #{t('.np')}
-    /
-      Javascripts
-      \==================================================
-    / Placed at the end of the document so the pages load faster
-    = javascript_include_tag "application"
-
+    = render 'layouts/shared/footer'
