--- a/app/views/web/members/new.html.haml
+++ b/app/views/web/members/new.html.haml
@@ -16,18 +16,14 @@
     %fieldset 
       %legend= i18n.t('education')
       = f.input :institute
-      .control-group.string.optional
-        %label.string.optional.control-label{:for => "member_institute"}= i18n.t('study_start')
-        .controls
-          = f.input_field :start_month, :collection => Member::STUDY_MONTH, :include_blank => i18n.t('month'),
-            :style => 'width: 155px'
-          = f.input_field :start_year, :placeholder => i18n.t('year'), :class => 'span1'
-      .control-group.string.optional
-        %label.string.optional.control-label{:for => "member_institute"}= i18n.t('study_finish')
-        .controls
-          = f.input_field :finish_month, :collection => Member::STUDY_MONTH, :include_blank => i18n.t('month'),
-            :style => 'width: 155px'
-          = f.input_field :finish_year, :placeholder => i18n.t('year'), :class => 'span1'
+      = f.input :start_month do
+        = f.input_field :start_month, :collection => Member::STUDY_MONTH, :include_blank => i18n.t('month'),
+          :style => 'width: 155px'
+        = f.input_field :start_year, :placeholder => i18n.t('year'), :class => 'span1'
+      = f.input :finish_month do
+        = f.input_field :finish_month, :collection => Member::STUDY_MONTH, :include_blank => i18n.t('month'),
+          :style => 'width: 155px'
+        = f.input_field :finish_year, :placeholder => i18n.t('year'), :class => 'span1'
       = f.input :department
       = f.input :profession
       = f.input :degree
