--- a/app/views/layouts/shared/_footer.html.haml
+++ b/app/views/layouts/shared/_footer.html.haml
@@ -1,6 +1,19 @@
+%hr
 %footer
-  %p(class='pull-right')= t('contacts.phone')
-  %p &copy; #{t('.np')}
+  .row
+    .span4
+      %p(class='pull-right')= t('contacts.phone')
+      %p &copy; НП
+    .span4
+      %h4 Поделиться
+      %span.st_facebook_large
+      %span.st_vkontakte_large
+      %span.st_twitter_large
+      %span.st_plusone_large
+      %span.st_email_large
+
+    .span4
+      %h4 Партнеры
 /
   Javascripts
   \==================================================
