--- a/app/views/web/accounts/edit.html.haml
+++ b/app/views/web/accounts/edit.html.haml
@@ -28,18 +28,14 @@
             %hr
             %h3= i18n.t('education')
             = f.input :institute
-            .control-group.string.optional
-              %label.string.optional.control-label{:for => "member_institute"}= i18n.t('study_start')
-              .controls
-                = f.input_field :start_month, :collection => Member::STUDY_MONTH, :include_blank => i18n.t('month'),
-                  :style => 'width: 155px'
-                = f.input_field :start_year, :placeholder => i18n.t('year'), :class => 'span1'
-            .control-group.string.optional
-              %label.string.optional.control-label{:for => "member_institute"}= i18n.t('study_finish')
-              .controls
-                = f.input_field :finish_month, :collection => Member::STUDY_MONTH, :include_blank => i18n.t('month'),
-                  :style => 'width: 155px'
-                = f.input_field :finish_year, :placeholder => i18n.t('year'), :class => 'span1'
+            = f.input :study_start do
+              = f.input_field :start_month, :collection => Member::STUDY_MONTH, :include_blank => t('datetime.prompts.month'),
+                :style => 'width: 155px'
+              = f.input_field :start_year, :placeholder => t('datetime.prompts.year'), :class => 'span1'
+            = f.input :study_finish do
+              = f.input_field :finish_month, :collection => Member::STUDY_MONTH, :include_blank => t('datetime.prompts.month'),
+                :style => 'width: 155px'
+              = f.input_field :finish_year, :placeholder => t('datetime.prompts.year'), :class => 'span1'
             = f.input :department
             = f.input :profession
             = f.input :degree
