--- a/app/views/layouts/shared/_navbar.html.haml
+++ b/app/views/layouts/shared/_navbar.html.haml
@@ -23,4 +23,4 @@
           - else
             %li= link_to t('.new_member'), new_member_path
             %li.divider-vertical
-            %li= link_to t('.auth'), new_session_path
+            %li= link_to t('.login'), new_session_path
