--- a/app/views/layouts/shared/_footer.html.haml
+++ b/app/views/layouts/shared/_footer.html.haml
@@ -1,19 +1,28 @@
-%hr
 %footer
-  .row
-    .span4
-      %p(class='pull-right')= t('contacts.phone')
-      %p &copy; НП
-    .span4
-      %h4 Поделиться
-      %span.st_facebook_large
-      %span.st_vkontakte_large
-      %span.st_twitter_large
-      %span.st_plusone_large
-      %span.st_email_large
+  .container
+    .row#footer_top
+      .span4
+        %h2 О нас
+        %ul.nav
+          %li= link_to_page contacts_page
+        %p= t('contacts.phone')
 
-    .span4
-      %h4 Партнеры
+        %h4 Поделиться
+        %span.st_facebook_large
+        %span.st_vkontakte_large
+        %span.st_twitter_large
+        %span.st_plusone_large
+        %span.st_email_large
+
+      .span4
+        %h4 Принимали участие
+        %ul.nav
+          %li= link_to_page provider_page
+          %li= link_to_page partners_page
+
+    .row#footer_bottom
+      .span12
+        %p &copy; НП
 /
   Javascripts
   \==================================================
