fixed show shared buttons on pages

--- a/app/views/layouts/shared/_footer.html.haml
+++ b/app/views/layouts/shared/_footer.html.haml
@@ -15,7 +15,7 @@
         %span.st_email_large
 
       .span4
-        %h4 Принимали участие
+        %h2 Принимали участие
         %ul.nav
           %li= link_to_page provider_page
           %li= link_to_page partners_page
@@ -28,3 +28,4 @@
   \==================================================
 / Placed at the end of the document so the pages load faster
 = javascript_include_tag "application"
+= javascript_include_tag 'http://w.sharethis.com/button/buttons.js', 'http://s.sharethis.com/loader.js'
