try to fix ckeditor in admin

--- a/app/views/layouts/shared/_footer.html.haml
+++ b/app/views/layouts/shared/_footer.html.haml
@@ -27,5 +27,5 @@
   Javascripts
   \==================================================
 / Placed at the end of the document so the pages load faster
-= javascript_include_tag "application"
-= javascript_include_tag 'http://w.sharethis.com/button/buttons.js', 'http://s.sharethis.com/loader.js'
+= javascript_include_tag "application", 'http://w.sharethis.com/button/buttons.js',
+  'http://s.sharethis.com/loader.js'
