--- a/app/views/layouts/shared/_footer.html.haml
+++ b/app/views/layouts/shared/_footer.html.haml
@@ -13,12 +13,13 @@
           %li= link_to_page provider_page
           %li= link_to_page partners_page
 
-      %h4 Поделиться
-        %span.st_facebook_large
-        %span.st_vkontakte_large
-        %span.st_twitter_large
-        %span.st_plusone_large
-        %span.st_email_large
+      .span4      
+        %h4 Поделиться
+          %span.st_facebook_large
+          %span.st_vkontakte_large
+          %span.st_twitter_large
+          %span.st_plusone_large
+          %span.st_email_large
 
     .row#footer_bottom
       .span12
