--- a/app/views/layouts/web/welcome.html.haml
+++ b/app/views/layouts/web/welcome.html.haml
@@ -8,6 +8,7 @@
     .container
       .content
         = flash_block
+        = render 'layouts/shared/splash'
 
         = yield
     = render 'layouts/shared/footer'
