--- a/app/views/web/welcome/index.ru.html.haml
+++ b/app/views/web/welcome/index.ru.html.haml
@@ -46,5 +46,6 @@
       %li Создание «движухи» для молодых программистов Ульяновской области Мероприятие реализуется на общественных началах. В планах сделать Смену Deadline ежегодным мероприятием.
 
     %h4 Организаторы
+    %p МИЦ
     %p Некоммерческое партнерство
 
