--- a/app/views/web/welcome/index.ru.html.haml
+++ b/app/views/web/welcome/index.ru.html.haml
@@ -2,7 +2,11 @@
   .span6
     %h2 9 - 16 июля в Русском береге
     %h3 Выездной обучающий семинар для молодёжи, которая хочет работать в сфере ИТ, в частности, заниматься разработкой программных продуктов. Участники в течение нескольких дней будут работать над продуктом.
-    - unless member_signed_in?
+    - if member_signed_in?
+      %a.btn.btn-success.btn-large{:href => program_page }
+        %i.icon-chevron-right
+        Программа
+    - else
       %a.btn.btn-success.btn-large{:href => new_member_path}
         %i.icon-chevron-right
         Регистрация
