--- a/app/views/web/accounts/edit.html.haml
+++ b/app/views/web/accounts/edit.html.haml
@@ -1,10 +1,10 @@
 .row
-  = simple_form_for current_member, :as => :member, :validate => true, :url => account_path, :html => {:class => "form-horizontal"} do |f|
+  = simple_form_for current_member, :as => :member, :validate => true, :url => account_path, :html => {:class => "form-horizontal well"} do |f|
     = f.error_notification
 
     - with_options :scope => "members" do |i18n|
-      .tabbable.tabs-right
-        %ul.nav.nav-tabs.span3
+      .tabbable
+        %ul.nav.nav-tabs
           %li.active
             %a{:href => '#general', "data-toggle" => "tab"}= i18n.t('general_info')
           %li
@@ -15,120 +15,120 @@
             %a{:href => '#hobby', "data-toggle" => "tab"}= i18n.t('hobby')
         .tab-content.span9
           .tab-pane.active#general
-            %h3= i18n.t('contact_info')
-            = f.input :first_name
-            = f.input :last_name
-            = f.input :patronymic
-            = f.input :phone,
-              :input_html => {:rel => 'popover', :title => i18n.t('phone.title'), :"data-content" => i18n.t('phone.content')}
-            = f.input :skype
-            = f.input :jabber
-            = f.input :icq
-            = f.input :web
-            %hr
-            %h3= i18n.t('education')
-            = f.input :institute
-            = f.input :study_start do
-              = f.input_field :start_month, :collection => Member::STUDY_MONTH, :include_blank => t('datetime.prompts.month'),
-                :style => 'width: 155px'
-              = f.input_field :start_year, :placeholder => t('datetime.prompts.year'), :class => 'span1'
-            = f.input :study_finish do
-              = f.input_field :finish_month, :collection => Member::STUDY_MONTH, :include_blank => t('datetime.prompts.month'),
-                :style => 'width: 155px'
-              = f.input_field :finish_year, :placeholder => t('datetime.prompts.year'), :class => 'span1'
-            = f.input :department
-            = f.input :profession
-            = f.input :degree
-            = f.input :gpa
-            %hr
-            %h3= i18n.t 'camp'
-            = f.input :camp_time, :label => false, :inline_label => i18n.t('camp_time')
-            = f.input :camp_life, :label => false, :inline_label => i18n.t('camp_life')
-            = f.input :camp_notebook, :label => false, :inline_label => i18n.t('camp_notebook')
-            = f.input :camp_training, :label => false, :inline_label => i18n.t('camp_training')
+            .row
+              .span4
+                %fieldset
+                  %legend= i18n.t('contact_info')
+                  = f.input :first_name
+                  = f.input :last_name
+                  = f.input :patronymic
+                  = f.input :phone,
+                    :input_html => {:rel => 'popover', :title => i18n.t('phone.title'), :"data-content" => i18n.t('phone.content')}
+                  = f.input :skype
+                  = f.input :jabber
+                  = f.input :icq
+                  = f.input :web
+              .span5
+                %fieldset
+                  %legend= i18n.t('education')
+                  = f.input :institute
+                  = f.input :study_start do
+                    = f.input_field :start_month, :collection => Member::STUDY_MONTH, :include_blank => t('datetime.prompts.month'),
+                      :style => 'width: 155px'
+                    = f.input_field :start_year, :placeholder => t('datetime.prompts.year'), :class => 'span1'
+                  = f.input :study_finish do
+                    = f.input_field :finish_month, :collection => Member::STUDY_MONTH, :include_blank => t('datetime.prompts.month'),
+                      :style => 'width: 155px'
+                    = f.input_field :finish_year, :placeholder => t('datetime.prompts.year'), :class => 'span1'
+                  = f.input :department
+                  = f.input :profession
+                  = f.input :degree
+                  = f.input :gpa
 
           .tab-pane#additional_educations
-            %h3= i18n.t 'additional_educations'
-            = f.simple_fields_for :additional_educations do |p|
-              = render 'additional_education_fields', :f => p
-            .links.control-group
-              .ml30
-                = link_to_add_association i18n.t('add'), f, :additional_educations, :class => 'btn btn-small btn-info'
-            %hr
-            %h3= i18n.t 'achievements'
-            = f.simple_fields_for :achievements do |p|
-              = render 'achievement_fields', :f => p
-            .links.control-group
-              .ml30
-                = link_to_add_association i18n.t('add'), f, :achievements, :class => 'btn btn-small btn-info'
-            %hr
-            %h3= i18n.t 'langs'
-            = f.simple_fields_for :langs do |p|
-              = render 'lang_fields', :f => p
-            .links.control-group
-              .ml30
-                = link_to_add_association i18n.t('add'), f, :langs, :class => 'btn btn-small btn-info'
+            %fieldset
+              %legend= i18n.t 'additional_educations'
+              = f.simple_fields_for :additional_educations do |p|
+                = render 'additional_education_fields', :f => p
+              .links.control-group
+                = link_to_add_association i18n.t('add'), f, :additional_educations
+
+            %fieldset
+              %legend= i18n.t 'achievements'
+              = f.simple_fields_for :achievements do |p|
+                = render 'achievement_fields', :f => p
+              .links.control-group
+                = link_to_add_association i18n.t('add'), f, :achievements
+
+            %fieldset
+              %legend= i18n.t 'langs'
+              = f.simple_fields_for :langs do |p|
+                = render 'lang_fields', :f => p
+              .links.control-group
+                = link_to_add_association i18n.t('add'), f, :langs
 
           .tab-pane#skill
-            %h3= i18n.t 'skill'
-            %h4= i18n.t 'skills.program_lang'
-            = f.simple_fields_for :skill_program_langs do |p|
-              = render 'skill_program_lang_fields', :f => p
-            .links.control-group
-              .ml30
-                = link_to_add_association i18n.t('add'), f, :skill_program_langs, :class => 'btn btn-small btn-info'
-            %h4= i18n.t 'skills.database'
-            = f.simple_fields_for :skill_databases do |p|
-              = render 'skill_database_fields', :f => p
-            .links.control-group
-              .ml30
-                = link_to_add_association i18n.t('add'), f, :skill_databases, :class => 'btn btn-small btn-info'
-            %h4= i18n.t 'skills.os'
-            = f.simple_fields_for :skill_operation_systems do |p|
-              = render 'skill_operation_system_fields', :f => p
-            .links.control-group
-              .ml30
-                = link_to_add_association i18n.t('add'), f, :skill_operation_systems, :class => 'btn btn-small btn-info'
-            %h4= i18n.t 'skills.ide'
-            = f.simple_fields_for :skill_ides do |p|
-              = render 'skill_ide_fields', :f => p
-            .links.control-group
-              .ml30
-                = link_to_add_association i18n.t('add'), f, :skill_ides, :class => 'btn btn-small btn-info'
-            %h4= i18n.t 'skills.other'
-            = f.simple_fields_for :skill_others do |p|
-              = render 'skill_other_fields', :f => p
-            .links.control-group
-              .ml30
-                = link_to_add_association i18n.t('add'), f, :skill_others, :class => 'btn btn-small btn-info'
+            %h2= i18n.t 'skill'
 
-            %hr
-            %h3= i18n.t 'preference'
-            = f.simple_fields_for :preferences do |p|
-              = render 'preference_fields', :f => p
-            .links.control-group
-              .ml30
-                = link_to_add_association i18n.t('add'), f, :preferences, :class => 'btn btn-small btn-info'
+            %fieldset
+              %legend= i18n.t 'skills.program_lang'
+              = f.simple_fields_for :skill_program_langs do |p|
+                = render 'skill_program_lang_fields', :f => p
+              .links.control-group
+                = link_to_add_association i18n.t('add'), f, :skill_program_langs
 
-            %hr
-            %h3= i18n.t 'job'
-            = f.simple_fields_for :jobs do |p|
-              = render 'job_fields', :f => p
-            .links.control-group
-              .ml30
-                = link_to_add_association i18n.t('add'), f, :jobs, :class => 'btn btn-small btn-info'
+            %fieldset
+              %legend= i18n.t 'skills.database'
+              = f.simple_fields_for :skill_databases do |p|
+                = render 'skill_database_fields', :f => p
+              .links.control-group
+                = link_to_add_association i18n.t('add'), f, :skill_databases
 
-            %hr
-            %h3= i18n.t 'other'
-            = f.simple_fields_for :others do |p|
-              = render 'other_fields', :f => p
-            .links.control-group
-              .ml30
-                = link_to_add_association i18n.t('add'), f, :others, :class => 'btn btn-small btn-info'
+            %fieldset
+              %legend= i18n.t 'skills.os'
+              = f.simple_fields_for :skill_operation_systems do |p|
+                = render 'skill_operation_system_fields', :f => p
+              .links.control-group
+                = link_to_add_association i18n.t('add'), f, :skill_operation_systems
+
+            %fieldset
+              %legend= i18n.t 'skills.ide'
+              = f.simple_fields_for :skill_ides do |p|
+                = render 'skill_ide_fields', :f => p
+              .links.control-group
+                = link_to_add_association i18n.t('add'), f, :skill_ides
+
+            %fieldset
+              %legend= i18n.t 'skills.other'
+              = f.simple_fields_for :skill_others do |p|
+                = render 'skill_other_fields', :f => p
+              .links.control-group
+                = link_to_add_association i18n.t('add'), f, :skill_others
+
+            %fieldset
+              %legend= i18n.t 'preference'
+              = f.simple_fields_for :preferences do |p|
+                = render 'preference_fields', :f => p
+              .links.control-group
+                = link_to_add_association i18n.t('add'), f, :preferences
+
+            %fieldset
+              %legend= i18n.t 'job'
+              = f.simple_fields_for :jobs do |p|
+                = render 'job_fields', :f => p
+              .links.control-group
+                = link_to_add_association i18n.t('add'), f, :jobs
+
+            %fieldset
+              %legend= i18n.t 'other'
+              = f.simple_fields_for :others do |p|
+                = render 'other_fields', :f => p
+              .links.control-group
+                = link_to_add_association i18n.t('add'), f, :others
 
 
           .tab-pane#hobby
-            %h3= i18n.t('hobby')
+
             = f.input :hobby, :as => :text_desc
             = f.input :sport, :as => :text_desc
 
