fixed news show

--- a/app/views/layouts/shared/_footer.html.haml
+++ b/app/views/layouts/shared/_footer.html.haml
@@ -5,6 +5,7 @@
         %h2 О нас
         %ul.nav
           %li= link_to_page contacts_page
+          %li= link_to t('news'), news_index_path
 
       .span4
         %h2 Принимают участие
