--- a/app/views/layouts/web/admin/application.html.haml
+++ b/app/views/layouts/web/admin/application.html.haml
@@ -28,6 +28,7 @@
             %ul.nav
               %li= link_to t('.members_list'), admin_members_path
               %li= link_to t('.pages_list'), admin_pages_path
+              %li= link_to t('.news_list'), admin_news_index_path
 
     .container
 
