--- a/app/views/layouts/shared/_footer.html.haml
+++ b/app/views/layouts/shared/_footer.html.haml
@@ -4,7 +4,8 @@
       .span3
         %h2 О нас
         %ul.nav
-          %li= link_to_page contacts_page
+          %li= link_to configus.mail.main
+          -#%li= link_to_page contacts_page
 
       .span4
         %h2 Принимают участие
